update lat java MD5